--- a/src/app/my-tasks/my-tasks.component.html
+++ b/src/app/my-tasks/my-tasks.component.html
@@ -1,6 +1,6 @@
 <div class="column-layout left_nav">
   <h6 class="h6">
-    Tasks
+    Tasks changed in code
   </h6>
   <div class="row-layout group">
     <p class="text">
